<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ref_slam_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lf6606397@todo.todo">lf</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- general dependencies -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend> 
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- for service -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <!-- for action -->
  <depend>action_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
